tests/baselines/reference/unicodeExtendedEscapesInStrings19_ES5.errors.txt
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings19_ES5.ts(1,13): error TS1125: Hexadecimal digit expected.


==== tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings19_ES5.ts (1 errors) ====
    var x = "\u{}";
                
!!! error TS1125: Hexadecimal digit expected.
    